# bc

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  main.rs  osc52.rs  terminal.rs
