[package]
name = "bc"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Kachan"]
description = "Boring Clipboard - A simple cross-platform clipboard tool"
license = "MIT"
repository = "https://github.com/pavelkachan/bc"
readme = "README.md"
keywords = ["clipboard", "cli", "terminal", "ssh", "osc52"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/bc", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bc/", "644"],
]

[dependencies]
arboard = { version = "3.4", default-features = false }
base64 = "0.22"
anyhow = "1.0"
is-terminal = "0.4"
clap = { version = "4.4", features = ["derive"] }
